<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="all_images">All pictures</string>
    <string name="all_videos">All videos</string>
    <string name="camera_label">Camera</string>
    <string name="gallery_label">Gallery</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="gallery_camera_media_bucket_name">Camera media</string>
    <string name="view_label">View picture</string>
    <string name="crop_label">Crop picture</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage" product="default">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space" product="default">Your SD card is full.</string>
    <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
    <string name="wallpaper">Setting wallpaper, please wait\u2026</string>
    <string name="savingImage">Saving picture\u2026</string>
    <string name="runningFaceDetection">Please wait\u2026</string>
    <string name="view">View</string>
    <string name="details">Details</string>
    <string name="rotate">Rotate</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="multiselect">Multiselect</string>
    <string name="pick_picture">Add picture</string>
    <string name="confirm_delete_title">Delete</string>
    <string name="confirm_delete_message">The picture will be deleted.</string>
    <string name="confirm_delete_video_message">The video will be deleted.</string>
    <string name="confirm_delete_multiple_message">These media files will be deleted.</string>
    <string name="camera_delete">Delete</string>
    <string name="camera_remove">Remove</string>
    <string name="confirm_remove_title">Remove</string>
    <string name="confirm_remove_message">The picture will be removed.</string>
    <string name="confirm_remove_video_message">The video will be removed.</string>
    <string name="camera_share">Share</string>
    <string name="camera_play">Play</string>
    <string name="camera_attach">Attach</string>
    <string name="camera_info">Info</string>
    <string name="camera_cancel">Cancel</string>
    <string name="no_way_to_share_image">No application available to share the picture.</string>
    <string name="no_way_to_share_video">No application available to share the video.</string>
    <string name="no_way_to_share">No application available to share the media file(s).</string>
    <string name="video_play">Play</string>
    <string name="camera_pick_wallpaper">Pictures</string>
    <string name="camera_setas_wallpaper">Wallpaper</string>
    <string name="pref_gallery_confirm_delete_title">Confirm deletions</string>
    <string name="pref_gallery_confirm_delete_summary">Show confirmation before deleting a picture or video</string>
    <string name="details_panel_title">Details</string>
    <string name="details_file_size">File size:</string>
    <string name="details_image_resolution">Resolution:</string>
    <string name="details_image_make">Manufacturer:</string>
    <string name="details_image_model">Model:</string>
    <string name="details_image_whitebalance">WhiteBalance:</string>
    <string name="details_image_latitude">GPS Latitude:</string>
    <string name="details_image_longitude">GPS Longitude:</string>
    <string name="details_image_location">Location:</string>
    <string name="details_duration">Duration:</string>
    <string name="details_date_taken">Date taken:</string>
    <string name="details_frame_rate">Frame rate:</string>
    <string name="details_bit_rate">Bit rate:</string>
    <string name="details_codec">Codec:</string>
    <string name="details_format">Format:</string>
    <string name="details_last_modified">Last Modified:</string>
    <string name="details_dimension_x" translatable="false"><xliff:g id="width" example="640">%1$d</xliff:g> x <xliff:g id="height" example="480">%2$d</xliff:g></string>
    <string name="details_ms" translatable="false"><xliff:g id="minutes">%1$02d</xliff:g>:<xliff:g id="seconds">%2$02d</xliff:g></string>
    <string name="details_hms" translatable="false"><xliff:g id="hours">%1$d</xliff:g>:<xliff:g id="minutes">%2$02d</xliff:g>:<xliff:g id="seconds">%3$02d</xliff:g></string>
    <string name="details_fps" translatable="false"><xliff:g id="frames" example="30">%1$d</xliff:g> fps</string>
    <string name="details_kbps" translatable="false"><xliff:g id="speed" example="192">%1$d</xliff:g> Kbps</string>
    <string name="details_mbps" translatable="false"><xliff:g id="speed" example="2.3">%1$g</xliff:g> Mbps</string>
    <string name="details_ok">OK</string>
    <string name="context_menu_header">Picture options</string>
    <string name="video_context_menu_header">Video options</string>
    <string name="photos_gallery_title">Gallery</string>
    <string name="pick_photos_gallery_title">Select picture</string>
    <string name="videos_gallery_title">Gallery</string>
    <string name="pick_videos_gallery_title">Select video</string>
    <string name="sendImage">Send Piccza via</string>
    <string name="share_text_short">My Piczza from PiczzaMMS.</string>
    <string name="setImage">Set picture as</string>
    <string name="sendVideo">Share video via</string>
    <string name="send_media_files">Share media files via</string>
    <string name="movieviewlabel">Movies</string>
    <string name="loading_video">Loading video\u2026</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from <xliff:g id="duration" example="5:30">%s</xliff:g> ?</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="gadget_title">Picture frame</string>
    <string name="file_info_title">File info:</string>
    <string name="video_exceed_mms_limit">The video you recorded is too large to send via MMS. Try recording a shorter length clip.</string>
    <string name="delete_images_message">Deleting images, please wait\u2026</string>
    <string name="crop_add_text">Add</string>
    <string name="crop_cancel_text">Cancel</string>
    <string name="crop_add_more">Add More</string>
    <string name="refresh">Refresh</string>
    <string name="no_pictures_message">No media found.</string>
</resources>