<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black" >

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#222222"
        android:orientation="horizontal"
        android:paddingBottom="10dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <Button
            android:id="@+id/add"
            style="@style/CropButton"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_add"
            android:text="@string/crop_add_text" />

        <Button
            android:id="@+id/cancel"
            style="@style/CropButton"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_cancel"
            android:text="@string/crop_cancel_text" />

        <Button
            android:id="@+id/add_more"
            style="@style/CropButton"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_add_more"
            android:text="@string/crop_add_more" />
    </LinearLayout>

    <com.piczzamms.gallery.ui.CropImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent" />

</RelativeLayout>